add styling enhancements

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -5,6 +5,15 @@ body {
     font-family: 'Lato';
     background: @theme-bg;
     color: @theme-font-color;
+    font-size: 15px;
+}
+
+a {
+    color: #b6452f;
+
+    &:focus, &:hover {
+        color: #b62808;
+    }
 }
 
 .main {
@@ -128,7 +137,7 @@ ul {
 
 .current-event {
     font-size: 8px;
-    color: #5ACE24;
+    color: #b9d04f;
     position: absolute;
     right: 100%;
     top: 4px;
