--- a/assets/less/floating-nav.less
+++ b/assets/less/floating-nav.less
@@ -3,7 +3,7 @@
 */
 
 .floating-nav-trigger {
-    @color: darken(@theme-label-bg, 20%);
+    @color: darken(@theme-floating-nav, 20%);
     .square(50px);
     .box-shadow(0 1px 4px rgba(0, 0, 0, 0.24));
     .transition(background-color 0.5s ease);
