--- a/assets/less/variables.less
+++ b/assets/less/variables.less
@@ -7,6 +7,7 @@
 @theme-blue: #428bca;
 @theme-yellow: #f1c40f;
 @theme-green: #5cb85c;
+@theme-rorange: #b62808;
 
 //Icon styles
 @icon-color: #707070;
@@ -51,9 +52,10 @@
 // Skill related colors
 @skill-beginner-color: @theme-red;
 @skill-intermediate-color: @theme-yellow;
-@skill-advanced-color: @theme-blue;
+@skill-advanced-color: @theme-rorange;
 @skill-master-color: @theme-green;
 
 // Label styles
 @theme-label-border-color: darken(@theme-label-bg, 20%);
-@theme-label-bg: lighten(@theme-blue, 15%);
+@theme-label-bg: lighten(@theme-rorange, 25%);
+@theme-floating-nav: lighten(@theme-rorange, 10%);
