update print.less to reduce profile-card min-height

--- a/assets/less/print.less
+++ b/assets/less/print.less
@@ -5,13 +5,14 @@
 
     .profile-card {
         text-align: center;
+        min-height: 250px;
     }
 
     .profile-pic {
         display: inline-block;
         vertical-align: middle;
         img {
-            border-radius: 0;
+            border-radius: 50%;
         }
     }
 
@@ -23,7 +24,7 @@
 
     .contact-details {
         .detail {
-            .make-xs-column(3);
+            .make-xs-column(4);
             padding: 0;
         }
     }
